################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(turtlebot3_LDS)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  rospy
  sensor_msgs
  geometry_msgs
)


################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  #INCLUDE_DIRS include
  CATKIN_DEPENDS rospy sensor_msgs geometry_msgs
)

################################################################################
# Build
################################################################################
include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)
################################################################################
# Install
################################################################################
catkin_install_python(PROGRAMS scripts/LDS.py
 		      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
################################################################################
# Test
################################################################################
