<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_bringup</name>
  <version>2.0.0</version>
  <description>
    ROS 2 launch scripts for starting the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_bringup</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hls_lfcd_lds_driver</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_node</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
