<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_camera</name>
  <version>2.2.9</version>
  <description>nLaunch integration for Raspberry Pi Camera using camera_ros</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>camera_ros</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>