################################################################################
# CMake
################################################################################

cmake_minimum_required(VERSION 2.8.3)
project(turtlebot3_core)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  rosserial_python
  tf
  std_msgs
  sensor_msgs
  geometry_msgs
  nav_msgs
  turtlebot3_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  CATKIN_DEPENDS roscpp rospy rosserial_python tf std_msgs sensor_msgs geometry_msgs nav_msgs turtlebot3_msgs
)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################
install(DIRECTORY launch/
        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

################################################################################
# Test
################################################################################
